--- a/app/src/debug/AndroidManifest.xml
+++ b/app/src/debug/AndroidManifest.xml
@@ -2,7 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <application tools:ignore="AllowBackup,MissingApplicationIcon">
+    <application tools:ignore="AllowBackup,MissingApplicationIcon"
+        android:usesCleartextTraffic="true"
+        tools:targetApi="m">
         <!-- Required for createComposeRule. you'll have to add ComponentActivity -->
         <activity
             android:name="androidx.activity.ComponentActivity"
